# speakpy

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  speakpy.py  speakpy_gui.py
src/: __init__.py  api_client.py  audio_compressor.py  audio_recorder.py  gui.py  single_instance.py  utils.py  vad_processor.py
walkthrough/: walkthrough_01.md  walkthrough_02.md  walkthrough_03.md  walkthrough_04.md  walkthrough_05.md  walkthrough_06.md  walkthrough_07.md  walkthrough_08.md  walkthrough_09.md  walkthrough_10.md  walkthrough_11.md  walkthrough_12.md  walkthrough_13.md
